--- a/02.Assignment.ipynb
+++ b/02.Assignment.ipynb
@@ -65,12 +65,10 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# <a id='7'>1. 2. Write a Python program to reverse a word after accepting the input from the user.<a/>"
+    "# <a id='7'>2. Write a Python program to reverse a word after accepting the input from the user.<a/>"
    ]
   },
   {
@@ -80,23 +78,37 @@
    "outputs": [],
    "source": [
     "input = iNueron\n",
-    "output = "
+    "output = noreuNi"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# <a id='7'>1. Create the below pattern using nested for loop in Python.<a/>"
+    "def string_rev(x):\n",
+    "    return x[::-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'noreuNi'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "string_rev(\"iNueron\")"
    ]
   },
   {
@@ -107,25 +119,11 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Done"
+   ]
   },
   {
    "cell_type": "code",
