--- a/04.Assignment.ipynb
+++ b/04.Assignment.ipynb
@@ -262,11 +262,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "print(vowel_check(\"\"))"
+    "print(vowel_check(\"A\"))"
    ]
   },
   {
@@ -275,6 +283,13 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Done"
+   ]
   },
   {
    "cell_type": "code",
