--- a/07.Assignment.Numpy.ipynb
+++ b/07.Assignment.Numpy.ipynb
@@ -8,15 +8,55 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# <a id='7'>Write a function so that the columns of the output matrix are powers of the inputvector.</a>\n",
+    "\n",
+    "The order of the powers is determined by the increasing boolean argument. Specifically, when increasing is False, the \n",
+    "i-th output column is the input vector raised element-wise to the powerof N - i - 1."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Write a function so that the columns of the output matrix are powers of the input\n",
-    "vector.\n",
-    "The order of the powers is determined by the increasing boolean argument. Specifically, when increasing is False, the \n",
-    "i-th output column is the input vector raised element-wise to the powerof N - i - 1."
+    "import numpy as np\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = np.array([1, 2, 3, 5])\n",
+    "N = 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vander with Only Array :\n",
+      " [[  1   1   1   1]\n",
+      " [  8   4   2   1]\n",
+      " [ 27   9   3   1]\n",
+      " [125  25   5   1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = np.vander(x)\n",
+    "print('Vander with Only Array :\\n'  , result)"
    ]
   },
   {
@@ -28,10 +68,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NP Vander with Array and N Values: \n",
+      " [[ 1  1  1]\n",
+      " [ 4  2  1]\n",
+      " [ 9  3  1]\n",
+      " [25  5  1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "result2 = np.vander(x, N)\n",
+    "print('NP Vander with Array and N Values: \\n' , result2)"
+   ]
   },
   {
    "cell_type": "code",
@@ -42,10 +97,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NP Vander with Power (N-1-i) : \n",
+      " [[ 1  1  1]\n",
+      " [ 4  2  1]\n",
+      " [ 9  3  1]\n",
+      " [25  5  1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "result3 = np.column_stack([x**(N-1-i) for i in range(N)])\n",
+    "print('NP Vander with Power (N-1-i) : \\n' , result3)"
+   ]
   },
   {
    "cell_type": "code",
@@ -56,10 +126,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NP Vander with Increasing True :\n",
+      " [[  1   1   1   1]\n",
+      " [  1   2   4   8]\n",
+      " [  1   3   9  27]\n",
+      " [  1   5  25 125]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "result4 = np.vander(x, increasing=True)\n",
+    "print('NP Vander with Increasing True :\\n' , result4)"
+   ]
   },
   {
    "cell_type": "code",
@@ -70,10 +155,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NP Vander with Increasing True : \n",
+      " [[  1   1   1   1]\n",
+      " [  8   4   2   1]\n",
+      " [ 27   9   3   1]\n",
+      " [125  25   5   1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "result5 = np.vander(x, increasing=False)\n",
+    "print('NP Vander with Increasing True : \\n' , result5)"
+   ]
   },
   {
    "cell_type": "code",
@@ -83,11 +183,125 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## [Task 2](#0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# <a id='7'># Problem Statement 2:\n",
+    "Given a sequence of n values x1, x2, ..., xn and a window size k>0, the k-th moving average of the given sequence is defined as follows:\n",
+    "The moving average sequence has n-k+1 elements as shown below.\n",
+    "The moving averages with k=4 of a ten-value sequence (n=10) is shown below\n",
+    "\n",
+    "i 12345678910\n",
+    "===== ====================\n",
+    "Input 10 20 30 40 50 60 70 80 90 100\n",
+    "\n",
+    "y1 25 = (10+20+30+40)/4\n",
+    "\n",
+    "y2 35 = (20+30+40+50)/4\n",
+    "\n",
+    "y3 45 = (30+40+50+60)/4\n",
+    "\n",
+    "y4 55 = (40+50+60+70)/4\n",
+    "\n",
+    "y5 65 = (50+60+70+80)/4\n",
+    "\n",
+    "y6 75 = (60+70+80+90)/4\n",
+    "\n",
+    "y7 85 = (70+80+90+100)/4\n",
+    "\n",
+    "Thus, the moving average sequence has n-k+1=10-4+1=7 values.\n",
+    "\n",
+    "\n",
+    "# Question: Write a function to find moving average in an array over a window:\n",
+    "Test it over [3, 5, 7, 2, 8, 10, 11, 65, 72, 81, 99, 100, 150] and window of 3.</a>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Variables</th>\n",
+       "      <th>Rolling</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>5</td>\n",
+       "      <td>4.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>7</td>\n",
+       "      <td>5.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>8</td>\n",
+       "      <td>6.67</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10</td>\n",
+       "      <td>8.33</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Variables  Rolling\n",
+       "0          3      NaN\n",
+       "1          5     4.00\n",
+       "2          7     5.00\n",
+       "3          8     6.67\n",
+       "4         10     8.33"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame({'Variables' : [3,5,7,8,10,11,65,72,81,99,100,150]})\n",
+    "df['Rolling'] = df.rolling(window=3 , min_periods=2).mean().round(2)\n",
+    "df.head()"
+   ]
   },
   {
    "cell_type": "code",
@@ -97,32 +311,11 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Done"
+   ]
   },
   {
    "cell_type": "code",
