--- a/08.Assignment-DataViz.ipynb
+++ b/08.Assignment-DataViz.ipynb
@@ -1866,14 +1866,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Display of the above interactive plots from plotly"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "![](image1.png)   "
+   ]
   },
   {
    "cell_type": "code",
