--- a/08.Assignment-DataViz.ipynb
+++ b/08.Assignment-DataViz.ipynb
@@ -1866,6 +1866,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Display of the above interactive plots from plotly"
    ]
@@ -1874,6 +1879,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     "![](image1.png)   "
    ]
   },
@@ -1885,32 +1891,11 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Done"
+   ]
   },
   {
    "cell_type": "code",
